# DiePrompterei

./: CLAUDE.md  README.md  main.py  pyproject.toml
data/: gsm8k_validation.jsonl  ner_validation.jsonl  qa_validation.jsonl  sentiment_validation.jsonl
src/dieprompterei/: cli.py
src/dieprompterei/adapters/: metrics.py  schema_validator.py
src/dieprompterei/core/: guardian.py  judge.py  llm_client.py  logger.py  models.py  orchestrator.py  poet.py
src/dieprompterei/templates/: guardian.jinja2  judge.jinja2  poet.jinja2
tasks/examples/: classification.yaml  extraction.yaml  math_reasoning.yaml  qa.yaml
